Code refactoring, implement methods in GruppoServiceImpl.java

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Dashboard </title>
-</head>
-<body>
-    <h1> wellcome in dashboard</h1>
-
-</body>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+    <head>
+        <meta charset="UTF-8">
+        <title>Dashboard </title>
+    </head>
+    <body>
+        <h1> wellcome in dashboard</h1>
+        <a href="/visualizzaMembriSupergruppo"> visualizza lista membri</a>
+    </body>
 </html>
