Add paginaIMieiGruppi.html, redefine dashboard.html

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Benvenuto su Amigo!</title>
-    <link href="index.css" rel = "stylesheet">
+    <link href="../static/index.css" rel = "stylesheet">
 </head>
 <body>
 <div id="div_welcome">
@@ -14,7 +14,7 @@
 <div id = "div_body">
     <div id = "div_left_logo"></div>
     <div id="div_logo">
-        <img id = "img_logo" src="img/logo_amigo_trasparente.png" alt = "logoAmigo">
+        <img id = "img_logo" src="../static/img/logo_amigo_trasparente.png" alt = "logoAmigo">
     </div>
     <div id="div_right_logo"></div>
 </div>
@@ -24,7 +24,7 @@
 </body>
 <footer>
 </footer>
-<script type= "text/javascript" src="index.js"></script>
+<script type= "text/javascript" src="../static/index.js"></script>
 </html>
 
 
