--- a/src/main/resources/templates/paginaIMieiGruppi.html
+++ b/src/main/resources/templates/paginaIMieiGruppi.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>I tuoi gruppi</title>
 </head>
-<body>
+<body style = "background-color: #cecece">
 <div class="ui main text container">
     <h2 class="ui main text">Supergruppi</h2>
     <table class="ui celled table striped">
