--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+<link rel="stylesheet" th:href="@{/webjars/Semantic-UI/semantic.css}">
     <head>
     </head>
     <body>
         <meta charset="UTF-8">
-        <title>Dashboard </title>
+        <title>Dashboard</title>
+        <h1>Benvenuto nella Dash!</h1>
+    <div class = "ui button">
+        <a th:href="@{/visualizzaGruppi/} + ${idPersona}">I miei gruppi</a>
+    </div>
     </body>
 </html>
