--- a/src/main/resources/templates/paginaVisualizzaMembri.html
+++ b/src/main/resources/templates/paginaVisualizzaMembri.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" th:href="@{/webjars/Semantic-UI/semantic.css}">
     <title>Pagina Dettaglio</title>
 </head>
-        <h1>Dettaglio Supegruppo</h1>
+        <h1>Dettaglio Supergruppo</h1>
         <table class="ui celled table striped">
             <thead>
             <tr>
