Fix all features

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -8,7 +8,7 @@
         <title>Dashboard</title>
         <h1>Benvenuto nella Dash!</h1>
     <div class = "ui button">
-        <a th:href="@{/visualizzaGruppi/} + ${idPersona}">I miei gruppi</a>
+        <a th:href="@{gruppo/visualizzaGruppi=} + ${idPersona}">I miei gruppi</a>
     </div>
     </body>
 </html>
