--- a/src/main/resources/templates/gruppo/paginaVisualizzaMembri.html
+++ b/src/main/resources/templates/gruppo/paginaVisualizzaMembri.html
@@ -6,31 +6,41 @@
     <title>Pagina Dettaglio</title>
 </head>
     <body>
-    <h1>Dettaglio Supergruppo</h1>
-    <table class="ui celled table striped">
-        <thead>
-        <tr>
-            <th>Nome</th>
-            <th>Cognome</th>
-            <th>Ruolo</th>
-            <th></th>
-        </tr>
-        </thead>
-        <tbody>
-        <th:block th:each="persona : ${persone}">
-            <tr>
-                <td th:text="${persona.nome}"></td>
-                <td th:text="${persona.cognome}"></td>
-                <td th:text="${persona.ruolo}"></td>
-                <td><a th:href="@{'/gruppo/rimuovi/id={id1}&supergruppo={id2}'( id1=${persona.id},id2=${idSupergruppo})}" class="ui primary button">
-                    Rimuovi
-                </a></td>
+    <div class="ui secondary menu">
+        <a  class="item" href="/dashboard">Home</a>
+        <a class="item" th:href="@{visualizzaGruppi=} + ${personaLoggata}">I miei gruppi</a>
+
+        <div class="right menu">
+            <a class="item">Logout</a>
+        </div>
+    </div>
+    <h1 th:text="${supergruppo.name}" align="center"></h1>
+    <div class="ui main text container">
+        <table class="ui celled table">
+            <thead>
+            <tr class="center aligned">
+                <th>Nome</th>
+                <th>Cognome</th>
+                <th>Email</th>
+                <th th:if="${isResponsabile==true}"></th>
             </tr>
-        </th:block>
-        </tbody>
-    </table>
-    <a th:href="@{'/gruppo/id={id1}&supergruppo={id2}'( id1=${idConsiglio},id2=${idSupergruppo})}" class="ui primary button">
-        Aggiungi
-    </a>
+            </thead>
+            <tbody>
+            <th:block th:each="persona : ${persone}">
+                <tr class="center aligned">
+                    <td th:text="${persona.nome}"></td>
+                    <td th:text="${persona.cognome}"></td>
+                    <td th:text="${persona.user.getEmail()}"></td>
+                    <td><a th:if="${isResponsabile==true and supergruppo.responsabile.getId()!=persona.id}"  th:href="@{'/gruppo/rimuovi/id={id1}&supergruppo={id2}'( id1=${persona.id},id2=${supergruppo.id})}" class="ui primary button">
+                        Rimuovi
+                    </a></td>
+                </tr>
+            </th:block>
+            </tbody>
+        </table>
+        <a th:if="${isResponsabile==true}"th:href="@{'/gruppo/id={id1}&supergruppo={id2}'( id1=${idConsiglio},id2=${supergruppo.id})}" class="ui primary button">
+            Aggiungi
+        </a>
+    </div>
     </body>
 </html>
