--- a/src/main/resources/templates/gruppo/paginaIMieiGruppi.html
+++ b/src/main/resources/templates/gruppo/paginaIMieiGruppi.html
@@ -3,77 +3,45 @@
 <head>
     <link rel="stylesheet" th:href="@{/webjars/Semantic-UI/semantic.css}">
     <meta charset="UTF-8">
-    <title>I tuoi gruppi</title>
+    <title>I miei gruppi</title>
 </head>
-<body style = "background-color: #cecece">
-<div class="ui main text container">
-    <h2 class="ui main text">Supergruppi</h2>
-    <table class="ui celled table striped">
-        <thead>
-        <tr>
-            <th>Nome</th>
-            <th>Tipo</th>
-            <th>Stato</th>
-            <th></th>
-        </tr>
-        </thead>
-        <tbody>
-        <th:block th:each="supergruppo : ${supergruppi}">
-            <tr>
-                <td th:text="${supergruppo.name}"></td>
-                <td th:text="${supergruppo.type}"></td>
-                <td th:text="${supergruppo.state}"></td>
-                <td>
-                    <a th:href="@{/gruppo/visualizzaMembriSupergruppo=} + ${supergruppo.id}" class="ui primary button">
-                        Visualizza Dettagli
-                    </a>
-                </td>
-            </tr>
-        </th:block>
-        </tbody>
-    </table>
-    <h2 class="ui main text">Dipartimenti</h2>
-    <table class="ui celled table striped">
-        <thead>
-        <tr>
-            <th>Nome</th>
-            <th></th>
-        </tr>
-        </thead>
-        <tbody>
-        <th:block th:each="dipartimento : ${dipartimenti}">
-            <tr>
-                <td th:text="${dipartimento.name}"></td>
-                <td>
-                    <a th:href="@{/gruppo/visualizzaMembriDipartimento=} + ${dipartimento.id}" class="ui primary button">
-                        Visualizza Dettagli
-                    </a>
-                </td>
-            </tr>
-        </th:block>
-        </tbody>
-    </table>
-    <h2 class="ui main text">Consigli Didattici</h2>
-    <table class="ui celled table striped">
-        <thead>
-        <tr>
-            <th>Nome</th>
-            <th></th>
-        </tr>
-        </thead>
-        <tbody>
-        <th:block th:each="consiglio : ${consigli}">
-            <tr>
-                <td th:text="${consiglio.name}"></td>
-                <td>
-                    <a th:href="@{/gruppo/visualizzaMembriConsiglio=} + ${consiglio.id} " class="ui primary button">
-                        Visualizza Dettagli
-                    </a>
-                </td>
-            </tr>
-        </th:block>
-        </tbody>
-    </table>
+<body>
+<div class="ui secondary menu">
+    <a  class="item" href="/dashboard">Home</a>
+    <a class="item" th:href="@{visualizzaGruppi=} + ${personaLoggata}">I miei gruppi</a>
+
+
+    <div class="right menu">
+        <a class="item">Logout</a>
+    </div>
 </div>
+    <div class="ui main text container">
+        <h2 class="ui main text">I miei gruppi</h2>
+        <table class="ui celled table striped">
+            <thead>
+            <tr class="center aligned">
+                <th>Nome</th>
+                <th>Tipo</th>
+                <th>Stato</th>
+                <th></th>
+            </tr>
+            </thead>
+            <tbody>
+            <th:block th:each="supergruppo : ${supergruppi}">
+                <tr class="center aligned">
+                    <td th:text="${supergruppo.name}"></td>
+                    <td th:text="${supergruppo.type}"></td>
+                    <td th:text="${supergruppo.state}"></td>
+                    <td>
+                        <a th:href="@{/gruppo/visualizzaMembriSupergruppo=} + ${supergruppo.id}" class="ui primary button">
+                            Visualizza Dettagli
+                        </a>
+                    </td>
+                </tr>
+            </th:block>
+            </tbody>
+        </table>
+
+    </div>
 </body>
 </html>
