--- a/src/main/resources/templates/gruppo/aggiunta-membro.html
+++ b/src/main/resources/templates/gruppo/aggiunta-membro.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>All Sites</title>
+    <title>Amigo</title>
     <link rel="stylesheet" th:href="@{/webjars/Semantic-UI/semantic.css}">
 </head>
 <body>
@@ -43,7 +43,6 @@
         </th:block>
         </tbody>
     </table>
-
 </div>
 </body>
 </html>
