--- a/src/main/resources/templates/gruppo/paginaIMieiGruppi.html
+++ b/src/main/resources/templates/gruppo/paginaIMieiGruppi.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" th:href="@{/webjars/Semantic-UI/semantic.css}">
     <meta charset="UTF-8">
-    <title>I miei gruppi</title>
+    <title>Amigo</title>
 </head>
 <body>
 <div class="ui secondary menu">
@@ -31,7 +31,10 @@
                 <tr class="center aligned">
                     <td th:text="${supergruppo.name}"></td>
                     <td th:text="${supergruppo.type}"></td>
-                    <td th:text="${supergruppo.state}"></td>
+                    <td>
+                        <span th:if="${supergruppo.state==true}"> Attivo</span>
+                        <span th:if="${supergruppo.state==false}"> Chiuso</span>
+                    </td>
                     <td>
                         <a th:href="@{/gruppo/visualizzaMembriSupergruppo=} + ${supergruppo.id}" class="ui primary button">
                             Visualizza Dettagli
