--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,22 +2,22 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Benvenuto su Amigo!</title>
+    <title>Amigo</title>
     <link href="index.css" rel = "stylesheet">
 </head>
 <body>
-<div id="div_welcome">
-    <div id="div_centeralign">
-        <h1>Benvenuto su amigo!</h1>
+    <div id="div_welcome">
+        <div id="div_centeralign">
+            <h1>Benvenuto su amigo!</h1>
+        </div>
     </div>
-</div>
-<div id = "div_body">
-    <div id = "div_left_logo"></div>
-    <div id="div_logo">
-        <img id = "img_logo" src="img/logo_amigo_trasparente.png" alt = "logoAmigo">
+    <div id = "div_body">
+        <div id = "div_left_logo"></div>
+        <div id="div_logo">
+            <img id = "img_logo" src="img/logo_amigo_trasparente.png" alt = "logoAmigo">
+        </div>
+        <div id="div_right_logo"></div>
     </div>
-    <div id="div_right_logo"></div>
-</div>
 <div class = "ui button" id = "div_button">
     <a href="/dashboard">Accedi</a>
 </div>
