--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,23 +6,20 @@
     <link href="index.css" rel = "stylesheet">
 </head>
 <body>
-    <div id="div_welcome">
-        <div id="div_centeralign">
+    <div class="ui one column stackable center aligned page grid">
+        <div id="div_centeralign" class="column twelve wide">
             <h1>Benvenuto su amigo!</h1>
         </div>
     </div>
-    <div id = "div_body">
-        <div id = "div_left_logo"></div>
-        <div id="div_logo">
-            <img id = "img_logo" src="img/logo_amigo_trasparente.png" alt = "logoAmigo">
-        </div>
-        <div id="div_right_logo"></div>
+
+    <div class="ui placeholder segment">
+        <img class="ui centered medium image" src="img/logo_amigo_trasparente.png" alt = "logoAmigo">
     </div>
-<div class = "ui button" id = "div_button">
-    <a href="/dashboard">Accedi</a>
-</div>
+
+
+    <div class = "ui button" id = "div_button">
+        <a href="/dashboard">Accedi</a>
+    </div>
 </body>
-<footer>
-</footer>
 <script type= "text/javascript" src="index.js"></script>
 </html>
