--- a/src/main/resources/templates/gruppo/gruppo_detail.html
+++ b/src/main/resources/templates/gruppo/gruppo_detail.html
@@ -6,7 +6,8 @@
 </head>
     <body>
     <div th:insert="fragments/fragments.html :: header"></div>
-    <h1 th:text="${supergruppo.name}" class="ui header"  align="center"></h1>
+    <!--TODO Cambiare aggiungere nome supergruppo-->
+    <h1  class="ui header"  align="center">Membri </h1>
     <div class="ui main text container">
         <table class="ui celled table">
             <thead>
@@ -35,7 +36,38 @@
         </a>
         <div class="ui message success" th:if="${flagRimozione==1}">
             <i class="close icon"></i>
-            <p>Hai rimosso corettamente <span th:text="${personaRimossa.nome}"></span> <span th:text="${personaRimossa.cognome}"></span></p>
+            <p>Hai rimosso correttamente <span th:text="${personaRimossa.nome}"></span> <span th:text="${personaRimossa.cognome}"></span></p>
+        </div>
+        <!--TODO Cambiare aggiungere nome supergruppo-->
+        <h1 class="ui header" align="center">Commissioni </h1>
+        <div class="ui main text container">
+            <table class="ui celled table">
+                <thead>
+                <tr class="center aligned">
+                    <th>Nome</th>
+                    <th>Stato</th>
+                    <th></th>
+                </tr>
+                </thead>
+                <tbody>
+                <th:block th:each="commissione : ${commissioni}">
+                    <tr class="center aligned">
+                        <td th:text="${commissione.name}"></td>
+                        <td>
+                            <span th:if="${commissione.state == true}">Aperta</span>
+                            <span th:if="${commissione.state == false}">Chiusa</span>
+                        </td>
+                        <td ><a class="ui primary button">
+                            Visualizza Dettagli
+                        </a></td>
+                    </tr>
+                </th:block>
+                </tbody>
+            </table>
+            <!--TODO Cambiare con capogruppo-->
+            <a th:if="${isCapogruppo==true}"th:href="@{'/gruppi/{id2}/candidati'( id2=${supergruppo.id})}" class="ui primary button">
+                Crea Commissione
+            </a>
         </div>
     </div>
     <script>$('.message .close')
