--- a/src/main/resources/templates/gruppo/miei_gruppi.html
+++ b/src/main/resources/templates/gruppo/miei_gruppi.html
@@ -20,16 +20,16 @@
             </tr>
             </thead>
             <tbody>
-            <th:block th:each="supergruppo : ${supergruppi}">
+            <th:block th:each="gruppo : ${supergruppi}">
                 <tr class="center aligned">
-                    <td th:text="${supergruppo.name}"></td>
-                    <td th:text="${supergruppo.type}"></td>
+                    <td th:text="${gruppo.name}"></td>
+                    <td th:text="${gruppo.type}"></td>
                     <td>
-                        <span th:if="${supergruppo.state==true}"> Attivo</span>
-                        <span th:if="${supergruppo.state==false}"> Chiuso</span>
+                        <span th:if="${gruppo.state==true}"> Attivo</span>
+                        <span th:if="${gruppo.state==false}"> Chiuso</span>
                     </td>
                     <td>
-                        <a th:href="@{/gruppi/} + ${supergruppo.id}" class="ui primary button">
+                        <a th:href="@{/gruppi/} + ${gruppo.id}" class="ui primary button">
                             Visualizza Dettagli
                         </a>
                     </td>
