Add RF_4.2 , RF_4.3 , RF_4.4

--- a/src/main/resources/templates/fragments/fragments.html
+++ b/src/main/resources/templates/fragments/fragments.html
@@ -12,13 +12,13 @@
 
 <div class="ui inverted segment stackable"  th:fragment="header">
     <div class="ui inverted secondary pointing menu">
-        <a class="active item">
+        <a class="active item" href="/dashboard">
             Home
         </a>
         <a class="item" href="/gruppi">
             I miei gruppi
         </a>
-        <a class="item">
+        <a class="item" href="/taskPersonali">
             I miei task
         </a>
         <a class="item">
