--- a/src/main/resources/templates/task/paginaVisualizzaListaTaskPersonali.html
+++ b/src/main/resources/templates/task/paginaVisualizzaListaTaskPersonali.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div th:insert="fragments/fragments.html :: header"></div>
-<h1 class="ui header" align="center">I task del gruppo : </h1>
+<h1 class="ui header" align="center">I miei task : </h1>
 <!--    <form th:action="@{/gruppo/visualizzaListaTaskSupergruppo/} + ${idSupergruppo} +{/definizioneTaskSupergruppo}" method="post">-->
 
 <div class="ui main text container">
