--- a/src/main/resources/templates/task/paginaDettagliTaskSupergruppo.html
+++ b/src/main/resources/templates/task/paginaDettagliTaskSupergruppo.html
@@ -7,6 +7,9 @@
     </head>
 </head>
 <body>
+<div th:insert="fragments/fragments.html :: header"></div>
+
+<h1 class="ui header" align="center"> Dettagli task : </h1>
 <div class="ui main text container">
 <table class="ui celled table striped">
     <thead>
@@ -14,7 +17,6 @@
         <th>Nome</th>
         <th>Data scadenza</th>
         <th>Stato</th>
-        <th>Descrizione</th>
     </tr>
     </thead>
     <tbody>
@@ -26,8 +28,40 @@
 <!--            <td th:if="isResponsabile == true">-->
 <!--                <a class="ui primary button" th:href="@{'/gruppo/visualizzaListaTaskSupergruppo/{idSupergruppo}/dettagliTaskSupergruppo{idTask}'( idSupergruppo=${idSupergruppo} , idTask=${task.id} ) }">Dettagli</a>-->
 <!--            </td>-->
-            <td th:text="${task.descrizione}"></td>
         </tr>
+        <tr class="center aligned">
+            <th colspan="4" th:text="Descrizione"></th>
+        </tr>
+        <tr class="center aligned">
+            <td colspan="4" th:text="${task.descrizione}"></td>
+        </tr>
+
+        <tr th:if="${isResponsabile==true}" class="center aligned">
+            <td colspan="1">
+<!--   come consideriamo il caso in cui il task è accettato dal responsabile?
+        può essere cambiato nuovamente lo stato?
+
+-->
+                <a class="ui green button"
+                th:href="@{'/gruppo/visualizzaListaTaskSupergruppo/{idSupergruppo}/dettagliTaskSupergruppo{idTask}/approvazione' ( idSupergruppo=${idSupergruppo} , idTask=${task.id}) }"
+                > Accetta </a>
+            </td>
+            <td>
+                <a class="ui primary button"> Modifica</a>
+            </td>
+            <td colspan="1">
+                <a class="ui red button"
+                   th:href="@{'/gruppo/visualizzaListaTaskSupergruppo/{idSupergruppo}/dettagliTaskSupergruppo{idTask}/rifiuta' ( idSupergruppo=${idSupergruppo} , idTask=${task.id}) }"
+                > Respingi</a>
+            </td>
+        </tr>
+        <tr th:if="${(isResponsabile==false) and ( ( task.stato.equals('approvato') )==false )}" class="center aligned">
+            <td colspan="3">
+                <a class="ui primary button"> Completa</a>
+            </td>
+
+        </tr>
+
     </th:block>
     </tbody>
 </table>
