--- a/src/main/resources/templates/gruppo/nomina_responsabile.html
+++ b/src/main/resources/templates/gruppo/nomina_responsabile.html
@@ -4,6 +4,7 @@
     <title id="pageTitle">Amigo|Commissioni</title>
 </head>
 <body>
+<div th:insert="fragments/fragments.html :: header"></div>
 <div class="ui main text container">
     <table class="ui celled table">
         <thead>
