--- a/src/main/resources/templates/task/paginaDefinizioneTaskSupergruppo.html
+++ b/src/main/resources/templates/task/paginaDefinizioneTaskSupergruppo.html
@@ -34,7 +34,7 @@
     </div>
     <div class="field">
         <label>Data scadenza</label>
-        <input type="date" name="last-name" placeholder="" path="dataScadenza" th:field="*{stringData}">
+        <input type="date" name="last-name" placeholder="" path="dataScadenza" th:field="*{dataScadenza}">
     </div>
     <div class="field">
         <div class="field">
@@ -55,15 +55,45 @@
 <!--    </script>-->
 
 
-    <div class="field">
-        <label>Nome task</label>
-        <!--        <input type="text" name="first-name" placeholder="First Name" path="nome">-->
-        <input type="text" placeholder="First Name" path="nome" th:field="nome2">
-    </div>
+
+
+
+
+
+
+    <table class="ui celled table">
+        <thead>
+        <tr class="center aligned">
+            <th>Nome</th>
+            <th>Cognome</th>
+            <th>Email</th>
+        </tr>
+        </thead>
+        <tbody>
+        <th:block th:each="persona : ${persone}">
+           <tr class="center aligned">
+               <td>
+
+<!--                   <form:radiobuttons path="p" th:value="persona.nome" items="${persone}">-->
+<!--                       <form:radiobutton path="pp" th:value="persona.nome"></form:radiobutton>-->
+<!--                   </form:radiobuttons>-->
+<!--                   <form:radiobutton path="pp" th:value="persona.nome"></form:radiobutton>-->
+                   <input type="radio" th:name="idPersona" path="idPersona" th:value="${persona.id}">
+               </td>
+                <td th:text="${persona.nome}"></td>
+                <td th:text="${persona.cognome}"></td>
+                <td th:text="${persona.user.getEmail()}"></td>
+            </tr>
+        </th:block>
+        </tbody>
+    </table>
+
+
 
 
     <button class="ui button" type="submit">Submit</button>
 </form>
+
 
 
 
